--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon --watch '*.ts' --exec 'ts-node src/index.ts'"
+    "dev": "nodemon --watch 'src/**/*.ts' --exec 'ts-node src/index.ts'"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +16,9 @@
   },
   "dependencies": {
     "@types/express": "^4.17.13",
-    "express": "^4.17.1"
+    "@types/socket.io": "^3.0.2",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "socket.io": "^4.3.1"
   }
 }
