--- a/front/package.json
+++ b/front/package.json
@@ -9,9 +9,13 @@
     "@testing-library/user-event": "^12.1.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-quill": "^1.3.5",
     "react-scripts": "4.0.3",
     "socket.io-client": "^4.3.2",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "y-quill": "^0.1.4",
+    "y-websocket": "^1.3.17",
+    "yjs": "^13.5.17"
   },
   "scripts": {
     "start": "react-scripts start",
